--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
 </head>
 <body>
     <div class="container">
+        <h1>Guess The Number!</h1>
         <p>Enter a number between 1 to 100</p>
         <form>
             <!-- Input field to enter number -->
             <input type="number" id="number" min="0" max="100" placeholder="Enter a number" required>
             
             <!-- Submit button -->
-            <div class="buttons">
+            <div>
                 <button class="buttonStyle">Submit</button>
 
                 <!-- Restart Game button -->
-                <button class="buttonStyle" id="restart"  type='button' disabled>Start</button>
+                <button class="buttonStyle" id="restart"  type='button' disabled>Restart</button>
 
             </div>
         </form>
