--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Guess The Number!</h1>
-        <p>Enter a number between 1 to 100</p>
+        <p>Guess the number between 1 to 100, attempt limit: 10</p>
         <form>
             <!-- Input field to enter number -->
             <input type="number" id="number" min="0" max="100" placeholder="Enter a number" required>
